# UAkron-3460-477

./: .gitignore  README.md
convolution/: CMakeLists.txt  README.md  config.hpp.in  convolution.cpp
distributed-prime-numbers/: CMakeLists.txt  README.md  config.hpp.in  distributed-prime-numbers-helper.cpp  distributed-prime-numbers.cpp  shared_memory.hpp
hello-world/: CMakeLists.txt
parallel-sort/: CMakeLists.txt  README.md  config.hpp.in  parallel-sort.cpp
prime-numbers/: CMakeLists.txt  README.md  config.hpp.in  prime-numbers.cpp
